# s3m-sdk-python

./: .dockerignore  .gitlab-ci.yml  Dockerfile  README.md  olcf-s3m-compute.py  olcf-s3m-status.py  olcf-s3m-streaming.py  olcf-s3m-token.py  pyproject.toml  smc24-deploy-script.bash  smc24-streaming-demo.py
olcf_api/: client.py  compute.py  streaming.py  token.py
scripts/: smc24-streaming-demo.py
src/olcf_api/: compute.py
src/olcf_s3m_api/: client.py  compute.py  error.py  request.py  status.py  streaming.py  token.py
src/s3m_api/: auth.py
src/s3m_api/services/: compute.py  status.py  streaming.py
tests/: conftest.py  defiant-job.slurm  test_streaming.py
