[project]
name = "olcf-s3m-api"
version = "0.1.0"
description = "Python Client for OLCF S3M API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "requests-mock>=1.12.1",
    "ruff>=0.9.4",
]


[build-system]
urequires = ["hatchling"]
build-backend = "hatchling.build"
