[project]
name = "s3m-api"
version = "0.1.0"
description = "Python Client for S3M API, by the Oak Ridge Leadership Computing Facility (OLCF)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "requests-mock>=1.12.1",
    "ruff>=0.9.4",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s3m_api"]
